# Electricity-Inspection-Based-Ascend310

./: CMakeLists.txt  LICENSE  README.md  build.sh  image_main.sh  load.sh  upload.sh  upload_all.sh  video_main.sh
inc/: DvppJpegD.h  DvppVdec.h  DvppVenc.h  DvppVpcResize.h  FFMPEGInOut.h  ModelProcess.h  SampleProcess.h  YoloPostProcess.h  dvpp_jpege.h  dvpp_vpc.h  fast_math.h  ffmpeg_io.h  model_infer.h  sample_objection.h  utils.h  yolov4_post.h
src/: CMakeLists.txt  DvppJpegD.cpp  DvppJpegE.cpp  DvppVdec.cpp  DvppVenc.cpp  DvppVpcResize.cpp  FFMPEGInOut.cpp  ImageMain.cpp  ModelProcess.cpp  SampleProcess.cpp  VideoMain.cpp  YoloPostProcess.cpp  acl.json  bin_to_predict_yolov4_pytorch.py  dvpp_jpegd.cpp  dvpp_jpege.cpp  dvpp_vdec.cpp  dvpp_venc.cpp  dvpp_vpc.cpp  ffmpeg_io.cpp  image_main.cpp  model_infer.cpp  multi_main.cpp  opencv_image.cpp  sample_objection.cpp  utils.cpp  video_main.cpp  yolov4_post.cpp
yolov4_model_convert/: .env.sh.swp  README.md  aipp.config  bin_to_predict_yolov4_pytorch.py  coco_2014.info  dy_resize.py  fusion_result.json  ge_check_op.json  require.txt
yolov4_model_convert/detection-results/: output0.txt  output1.txt
